--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@types/node": "^12.20.24",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
+    "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.1",
     "react-icons": "^3.11.0",
+    "react-query": "^3.23.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^3.9.10",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "zustand": "^3.5.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8"
   }
 }
