--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^3.9.10",
+    "use-context-selector": "^1.3.9",
     "web-vitals": "^0.2.4",
     "zustand": "^3.5.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
