--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -11,8 +13,8 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.24",
-    "@types/react": "^16.14.15",
-    "@types/react-dom": "^16.9.14",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
@@ -23,7 +25,7 @@
     "react-query": "^3.23.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "^3.9.10",
+    "typescript": "^4.5.2",
     "use-context-selector": "^1.3.9",
     "web-vitals": "^0.2.4",
     "zustand": "^3.5.10"
@@ -51,5 +53,13 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8"
-  }
+  },
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ]
+  ]
 }
