--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.37",
@@ -18,6 +19,7 @@
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
+    "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.1",
@@ -34,7 +36,8 @@
     "start": "BROWSER=none PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write '**/*.{ts,tsx,js,css,html}'"
   },
   "eslintConfig": {
     "extends": "react-app"
